--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/pauliusfed/js-calendar-assignment/issues"
   },
-  "homepage": "https://github.com/pauliusfed/js-calendar-assignment#readme"
+  "homepage": "https://github.com/pauliusfed/js-calendar-assignment#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
+  }
 }
